# rust-cross-compile-sample

./: README.md
.github/workflows/: android-ci.yml  main.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/minyung/android/sample/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/minyung/android/sample/: MainActivity.kt
android/app/src/test/java/com/minyung/android/sample/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
android/mylibrary/: build.gradle.kts
android/mylibrary/src/androidTest/java/com/minyung/android/mylibrary/: ExampleInstrumentedTest.kt  (+1 more)
android/mylibrary/src/main/: AndroidManifest.xml
ios/: .gitignore
ios/IosSample/: ContentView.swift  IosSampleApp.swift
ios/IosSample.xcodeproj/: project.pbxproj
ios/IosSampleTests/: IosSampleTests.swift
ios/IosSampleUITests/: IosSampleUITests.swift  IosSampleUITestsLaunchTests.swift
ios/myframework/: build.sh
ios/myframework/myframework/: RustLib.swift  myframework.h
ios/myframework/myframework.xcodeproj/: project.pbxproj
ios/myframework/myframework/myframework.docc/: myframework.md
ios/myframework/myframeworkTests/: myframeworkTests.swift
rust/: Cargo.toml  cbindgen.toml
rust/src/: lib.rs
rust/src/android/: main.rs  mod.rs
rust/src/android/jvm/: jni_helper.rs  mod.rs  sdk_class_api.rs
rust/src/android/utils/: logger.rs
rust/src/ios/: main.rs  mod.rs  string.rs
rust/src/ios/utils/: logger.rs
static/js/: bootstrap.bundle.min.js
(+2 files in other folders)
