[package]
name = "RustSampleLibrary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"
android_logger = "0.11.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2.7"
oslog = "0.2.0"

[lib]
name = "rustlib"
crate-type = ["cdylib", "staticlib"]
