[package]
name = "RustSampleLibrary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"

jni = { version = "0.19.0", optional = true }
android_logger = { version = "0.11.1", optional = true }

objc = { version = "0.2.7", optional = true }
oslog = { version = "0.2.0", optional = true }
libc = { version = "0.2.137", optional = true }

[features]
android = ["dep:jni", "dep:android_logger"]
ios = ["dep:objc", "dep:oslog", "dep:libc"]

[lib]
name = "rustlib"
crate-type = ["cdylib", "staticlib"]
